// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolshot components/PaneContainer.tools.svelte: Empty 1`] = `
<span>
  
</span>
`;

exports[`Toolshot components/PaneContainer.tools.svelte: Multiple tabs 1`] = `
<span>
  <div
    class="root"
  >
    <nav>
      <ul>
        <li
          class="current"
        >
          First tab
        </li>
        
        <li>
          Another one
        </li>
        
        <li>
          A third...
        </li>
        
         
        <li>
          <button
            title="tooltip.collapsible"
          >
            <span
              class="material-icons"
            >
              expand_more
            </span>
          </button>
        </li>
      </ul>
    </nav>
     
    <main
      class="tab-content"
    >
      <h1>
        This is pane #1
      </h1>
      
      
      
      
       
    </main>
  </div>
  
</span>
`;

exports[`Toolshot components/PaneContainer.tools.svelte: Single tab 1`] = `
<span>
  <div
    class="root"
  >
    <nav>
      <ul>
        <li
          class="current"
        >
          tab 1
        </li>
        
         
        <li>
          <button
            title="tooltip.collapsible"
          >
            <span
              class="material-icons"
            >
              expand_more
            </span>
          </button>
        </li>
      </ul>
    </nav>
     
    <main
      class="tab-content"
    >
      <h1>
        This is pane #1
      </h1>
      
      
       
    </main>
  </div>
  
</span>
`;
